# mcp-snowflake-server

./: .gitignore  pyproject.toml
src/mcp_snowflake_server/: server.py
src/mcp_snowflake_server_formation/: __init__.py  db_client.py  server.py
